--- a/src/styles/pages/_settings.scss
+++ b/src/styles/pages/_settings.scss
@@ -1,5 +1,5 @@
 .settings-page {
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
