--- a/src/styles/pages/_status.scss
+++ b/src/styles/pages/_status.scss
@@ -1,5 +1,5 @@
 .status-page {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   
   @media (max-width: 768px) {
