--- a/src/styles/pages/_user.scss
+++ b/src/styles/pages/_user.scss
@@ -1,5 +1,5 @@
 .user-page {
-  max-width: 700px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
